--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-This is a Haskell bot for dAmn (deviantART Messaging Network). To install this:
+This is a Haskell bot for dAmn (deviantART Messaging Network). To install this, run the following:
+
+    $ git clone git://github.com/joshtwo/arsenic.git
+    $ cd arsenic
+    $ cabal update  # Update the list of packages cabal knows about
+    $ cabal install
+
+This will download, compile, and install a fresh copy of Arsenic from source. This assumes that you have both a Haskell compiler, such as GHC, and Cabal-install, which comes standard with the Haskell Platform.
